--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" >
 
     <title>Product Item</title>
+    <link rel="icon" href="logo.png" type="image">
 
     <style>
       .fw{
